force-app/main/default/objects/Major_Subject__c/Major_Subject__c.object-meta.xml
<CustomObject>
    <label>Major Subject</label>
    <nameField>
        <displayFormat>MSJ-{0000000000}</displayFormat>
        <label>Major Subject ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Major Subjects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>