force-app/main/default/objects/Major_Subject__c/fields/Major__c.field-meta.xml
<CustomField>
    <fullName>Major__c</fullName>
    <label>Major</label>
    <referenceTo>Major__c</referenceTo>
    <relationshipLabel>Major Subjects</relationshipLabel>
    <relationshipName>Major_Subjects</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>