force-app/main/default/objects/Major_Subject__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <label>Subject</label>
    <referenceTo>Subject__c</referenceTo>
    <relationshipLabel>Major Subjects</relationshipLabel>
    <relationshipName>Major_Subjects</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>