force-app/main/default/objects/Major_Subject__c/fields/Term_Number__c.field-meta.xml
<CustomField>
    <fullName>Term_Number__c</fullName>
    <label>Term Number</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>