force-app/main/default/objects/Major_Subject__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>Major__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>